apps/mautrix/whatsapp/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whatsapp
spec:
  gatewayClassName: whatsapp
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: whatsapp-i-shikanime-studio-tls
            group: ""
            kind: Secret
