apps/mautrix/whatsapp/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsapp-redirect
spec:
  hostnames:
      - whatsapp.i.shikanime.studio
  parentRefs:
    - name: whatsapp
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
