apps/mautrix/whatsapp/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsapp
spec:
  hostnames:
    - whatsapp.i.shikanime.studio
  parentRefs:
    - name: whatsapp
      sectionName: https
  rules:
    - backendRefs:
        - name: mautrix-whatsapp
          port: http
