apps/mautrix/whatsapp/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsapp
spec:
  hostnames:
    - whatsapp.taila659a.ts.net
  parentRefs:
    - name: whatsapp
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsapp-redirect
spec:
  hostnames:
    - whatsapp.taila659a.ts.net
  parentRefs:
    - name: whatsapp
      sectionName: http
